--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     {% if name %}
@@ -17,5 +18,7 @@
         <input type="text" name="username">
         <input type="submit" value="send">
     </form>
+
+
  </body>
 </html>
