--- a/templates/index.html
+++ b/templates/index.html
@@ -1,24 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href={{ url_for("static", filename='index.css') }}>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block content %}
     {% if name %}
     <p>Hello, {{name}}</p>
     {% else %}
     <p>Hello, what is your name?</p>
     {% endif %}
-  
+
     <form action="/">
         <input type="text" name="username">
         <input type="submit" value="send">
     </form>
-
-
- </body>
-</html>
+{% endblock %}
