--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,6 @@
 
     <form action="/">
         <input type="text" name="username">
-        <input type="submit" value="send">
+        <input type="submit" class="btn btn-primary" value="send">
     </form>
 {% endblock %}
